ie_um/src/main/java/com/example/ie_um/global/error/exception/AuthGroupException.java
package com.example.ie_um.global.error.exception;

public abstract class AuthGroupException extends RuntimeException {
    public AuthGroupException(String message) {
        super(message);
    }
}
